@@ -12,7 +12,11 @@ Version 1.3.3+svn:
   * Language and translations
     * Updated translations: Italian, Polish, Swedish.
 
+  * Map editor
+   * Minimum map size reduced to 1 hex.
+
   * User interface
+   * Maps smaller than the screen are now shown centered on the screen.
 
   * Unit changes and balancing
 
