@@ -1,4 +1,6 @@
 Version 1.3.3+svn:
+ * map editor
+   * the minimum map size is reduced to 1
  * graphics
    * added sickle and scythe attack icons
    * added weapon-shop tent and oak tree
@@ -11,6 +13,9 @@ Version 1.3.3+svn:
    * removed deprecated keys image_healing and image_halo_healing
  * user interface:
    * fixed a lag in the path rendering when there is a lot of units
+   * maps smaller than the screen are now shown centered on the screen
+ * Miscellaneous and bugfixes
+   * various bugfixes and code cleanups
    
 Version 1.3.3:
  * campaigns:
